# swiss-fintech-hackathon

./: .debtmap.toml  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile.web  FIX.md  HANDOFF.md  IDEAS.md  JUDGES_QA.md  README.md  challenge.md  package-lock.json  package.json  railway.json  run.md
apps/api/: Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
apps/firefly-bridge/: README.md  package.json  test-sign.ps1  tsconfig.json
apps/firefly-pixie/: .gitmodules  CMakeLists.txt  FLASHING.md  _idf-activate.ps1  capture_boot.py  flash.py  sdkconfig  sdkconfig.defaults  send_test_sign.py  test_bridge.py
apps/firefly-pixie/main/: CMakeLists.txt  main.c  panel_approve.c  panel_approve.h  panel_result.c  panel_standby.c  panel_transaction.c  panel_wait.c  panels.h
apps/web/: Dockerfile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
diagrams/: README.md  architecture-simplified.d2  architecture-simplified.md  architecture.d2  architecture.md  infrastructure-simplified.d2  infrastructure-simplified.md  infrastructure.d2  infrastructure.md
docs/: PLAN.md  architecture.md  build-plan.md  challenge.md  demo-script.md  deploy-cloudflare.md  insurance-engine-architecture.md  insurance-pricing-risk-engine.md  insurance-protocol.md  insurance.md  judging.md  pitch-deck.md  real-xrpl.md  sanctions-geopolitical-risk-plan.md  screen-image-prompts.md  vc-insurance-roadmap.md  verification-plan.md  verification-report.md
docs/backlog/: auto-insurance-handoff.md  (+1 more)
scripts/: start-full-app.sh  test-sign.ps1
(+151 files in other folders)
